§0.4.518 strings + docs: the README's own named-axis line did not compile, error messages cited work-item numbers a user cannot look up, and CAPABILITIES said CI had never run while the README said it was green
R17. Every string literal in main code that carried a §0.4 number now
states the fact instead (26 literals across core, ir, autograd,
stablehlo, kptx, maestro, runtime-pjrt and compiler-plugin), and the
jargon beside them went too: "named deferral", phase ids (G3a, H1a, H5,
B5, E1b), "landmine", "twin gap", "honest". The Python serving runtime's
user-facing messages lost theirs. The lowering, IR-phase and Kotlin
version hints now name the `tlaloc { }` spelling next to the -P one; the
LAMBDA_NOT_LOWERABLE pattern avoids braces, because K2 renders it
through MessageFormat (a first attempt with `tlaloc { ... }` in the
pattern failed 110 plugin tests with "can't parse argument number").
The KDoc of grad/grad3/jvp/vjp/vjp2/jvp2 cites no section numbers.
Tests pinned to the old text were updated: SafetensorsTest
(fp8IsRefusedByName), PjrtTpuLocalCertTest, DemotedKindRefusalTest.
Negative control: with the three main files restored to HEAD, those 5
tests fail; restored, they pass.

R18. README: `activations contract weights` (contract is infix); the
training snippet uses capture + CapturedStep.run + Adam +
saveCheckpoint instead of the gpu-training example's local helpers,
and says the GPU numbers come from that example. Both snippets are
mirrored in nn/src/jvmTest/.../readme/ReadmeSnippetsTest.kt, which
trains, checkpoints and reloads bit-identically; with the old
contract(a, b) spelling it does not compile. The README states no test
count; CAPABILITIES is the one place, as {{TEST_COUNT}} /
{{ROOT_COUNT}} / {{MAESTRO_COUNT}} placeholders for the recount. The
examples table lists named-indices; the License section names the
copyright holder; the dump example uses tlaloc { }.

R19. GETTING_STARTED rewritten: real clone URL, settings and build
files with jvmToolchain(